[gd_scene load_steps=31 format=3 uid="uid://d38f1ktc1txr0"]

[ext_resource type="Script" path="res://script/menu/level_paused.gd" id="1_l8sue"]
[ext_resource type="Shader" path="res://scene/menu/level_cleared.gdshader" id="2_i7qna"]
[ext_resource type="FontFile" uid="uid://bys4fsq5x5ci6" path="res://style/BULKYPIX.TTF" id="3_f80vl"]
[ext_resource type="Texture2D" uid="uid://e86b8carofro" path="res://asset/menu/pause_bg.png" id="3_tb565"]
[ext_resource type="Texture2D" uid="uid://5e1tastgl85p" path="res://asset/tiles/bintang.png" id="4_4a7q3"]
[ext_resource type="Texture2D" uid="uid://kv2rfxxbwein" path="res://asset/btn/btn_sheet.png" id="5_2kqyi"]
[ext_resource type="AudioStream" uid="uid://c2xm1t42epvhv" path="res://asset/sound/sfx/btn3.mp3" id="8_3yiuc"]
[ext_resource type="AudioStream" uid="uid://b4e158le2f2i6" path="res://asset/sound/sfx/btn8.mp3" id="9_b7rgs"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a2brh"]
shader = ExtResource("2_i7qna")
shader_parameter/amount = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xg1ac"]
texture = ExtResource("3_tb565")

[sub_resource type="Animation" id="Animation_0o2x6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBox/star_desc/s2/BoxContainer2/b2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBox/star_desc/s1/BoxContainer2/b1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBox/star_desc/s3/BoxContainer2/b3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_q6d4w"]
resource_name = "b0"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBox/star_desc/s2/BoxContainer2/b2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBox/star_desc/s1/BoxContainer2/b1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("VBox/star_desc/s3/BoxContainer2/b3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_oi2br"]
resource_name = "b1"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBox/star_desc/s2/BoxContainer2/b2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("VBox/star_desc/s3/BoxContainer2/b3:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_p8udj"]
resource_name = "b2"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("VBox/star_desc/s3/BoxContainer2/b3:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_c3v5o"]
_data = {
"RESET": SubResource("Animation_0o2x6"),
"b0": SubResource("Animation_q6d4w"),
"b1": SubResource("Animation_oi2br"),
"b2": SubResource("Animation_p8udj")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_jbofb"]
atlas = ExtResource("4_4a7q3")
region = Rect2(0, 0, 128, 64)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_f1ru2"]
load_path = "res://.godot/imported/btn_sheet.png-2ca33a56d55d2bbcc8add665bf7fad42.ctex"

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bfiqw"]
texture = SubResource("CompressedTexture2D_f1ru2")
region_rect = Rect2(192, 32, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dsh6a"]
texture = ExtResource("5_2kqyi")
region_rect = Rect2(224, 32, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xundp"]
texture = ExtResource("5_2kqyi")
region_rect = Rect2(224, 32, 32, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5ixcg"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_2sds8"]
texture = ExtResource("5_2kqyi")
region_rect = Rect2(64, 32, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y76y4"]
texture = ExtResource("5_2kqyi")
region_rect = Rect2(96, 32, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sbuic"]
texture = ExtResource("5_2kqyi")
region_rect = Rect2(96, 32, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_82put"]
texture = SubResource("CompressedTexture2D_f1ru2")
region_rect = Rect2(128, 64, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_rj181"]
texture = ExtResource("5_2kqyi")
region_rect = Rect2(160, 64, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_oakwg"]
texture = ExtResource("5_2kqyi")
region_rect = Rect2(160, 64, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_quppt"]
texture = ExtResource("5_2kqyi")
region_rect = Rect2(64, 96, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ys4xk"]
texture = ExtResource("5_2kqyi")
region_rect = Rect2(96, 96, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qandg"]
texture = ExtResource("5_2kqyi")
region_rect = Rect2(96, 96, 32, 32)

[node name="level_paused" type="Control" groups=["pause_menu"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l8sue")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_a2brh")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 449.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_xg1ac")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
libraries = {
"": SubResource("AnimationLibrary_c3v5o")
}

[node name="VBox" type="VBoxContainer" parent="Panel"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="BoxContainer" type="BoxContainer" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2
vertical = true

[node name="space" type="BoxContainer" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="star_desc" type="VBoxContainer" parent="Panel/VBox"]
custom_minimum_size = Vector2(448, 112)
layout_mode = 2

[node name="s1" type="HBoxContainer" parent="Panel/VBox/star_desc"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="space" type="BoxContainer" parent="Panel/VBox/star_desc/s1"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="BoxContainer2" type="BoxContainer" parent="Panel/VBox/star_desc/s1"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="b1" type="Sprite2D" parent="Panel/VBox/star_desc/s1/BoxContainer2"]
position = Vector2(32, 22)
texture = SubResource("AtlasTexture_jbofb")
hframes = 2

[node name="space2" type="BoxContainer" parent="Panel/VBox/star_desc/s1"]
custom_minimum_size = Vector2(9, 0)
layout_mode = 2

[node name="BoxContainer" type="BoxContainer" parent="Panel/VBox/star_desc/s1"]
layout_mode = 2

[node name="clear" type="Label" parent="Panel/VBox/star_desc/s1/BoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_f80vl")
theme_override_font_sizes/font_size = 23
text = "LEVEL SELESAI"
horizontal_alignment = 1
vertical_alignment = 1

[node name="s2" type="HBoxContainer" parent="Panel/VBox/star_desc"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="space" type="BoxContainer" parent="Panel/VBox/star_desc/s2"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="BoxContainer2" type="BoxContainer" parent="Panel/VBox/star_desc/s2"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="b2" type="Sprite2D" parent="Panel/VBox/star_desc/s2/BoxContainer2"]
position = Vector2(32, 22)
texture = SubResource("AtlasTexture_jbofb")
hframes = 2

[node name="space2" type="BoxContainer" parent="Panel/VBox/star_desc/s2"]
custom_minimum_size = Vector2(9, 0)
layout_mode = 2

[node name="less_con1" type="BoxContainer" parent="Panel/VBox/star_desc/s2"]
layout_mode = 2

[node name="less_than1" type="Label" parent="Panel/VBox/star_desc/s2/less_con1"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_f80vl")
theme_override_font_sizes/font_size = 18
text = "JUMLAH GERAK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="less2" type="Label" parent="Panel/VBox/star_desc/s2/less_con1"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_f80vl")
theme_override_font_sizes/font_size = 28
text = "<0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="s3" type="HBoxContainer" parent="Panel/VBox/star_desc"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2

[node name="space" type="BoxContainer" parent="Panel/VBox/star_desc/s3"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2

[node name="BoxContainer2" type="BoxContainer" parent="Panel/VBox/star_desc/s3"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="b3" type="Sprite2D" parent="Panel/VBox/star_desc/s3/BoxContainer2"]
position = Vector2(32, 22)
texture = SubResource("AtlasTexture_jbofb")
hframes = 2

[node name="space2" type="BoxContainer" parent="Panel/VBox/star_desc/s3"]
custom_minimum_size = Vector2(9, 0)
layout_mode = 2

[node name="less_con2" type="BoxContainer" parent="Panel/VBox/star_desc/s3"]
layout_mode = 2

[node name="less_than2" type="Label" parent="Panel/VBox/star_desc/s3/less_con2"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_f80vl")
theme_override_font_sizes/font_size = 18
text = "JUMLAH GERAK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="less1" type="Label" parent="Panel/VBox/star_desc/s3/less_con2"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 4
theme_override_fonts/font = ExtResource("3_f80vl")
theme_override_font_sizes/font_size = 28
text = "<0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBox"]
custom_minimum_size = Vector2(449, 76)
layout_mode = 2

[node name="space" type="BoxContainer" parent="Panel/VBox/HBoxContainer"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Control" type="Control" parent="Panel/VBox/HBoxContainer"]
custom_minimum_size = Vector2(147, 0)
layout_mode = 2

[node name="restart_lvl" type="Button" parent="Panel/VBox/HBoxContainer/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.5
offset_top = -38.0
offset_right = 2.5
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_type_variation = &"FlatButton"
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_f80vl")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_bfiqw")
theme_override_styles/hover = SubResource("StyleBoxTexture_dsh6a")
theme_override_styles/pressed = SubResource("StyleBoxTexture_xundp")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5ixcg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5ixcg")

[node name="Control3" type="Control" parent="Panel/VBox/HBoxContainer"]
custom_minimum_size = Vector2(147, 0)
layout_mode = 2

[node name="resume" type="Button" parent="Panel/VBox/HBoxContainer/Control3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.5
offset_top = -38.0
offset_right = 2.5
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"FlatButton"
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_f80vl")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_2sds8")
theme_override_styles/hover = SubResource("StyleBoxTexture_y76y4")
theme_override_styles/pressed = SubResource("StyleBoxTexture_sbuic")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5ixcg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5ixcg")

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBox/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/VBox"]
custom_minimum_size = Vector2(0, 76)
layout_mode = 2

[node name="space" type="BoxContainer" parent="Panel/VBox/HBoxContainer2"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="Control" type="Control" parent="Panel/VBox/HBoxContainer2"]
custom_minimum_size = Vector2(147, 0)
layout_mode = 2

[node name="help_btn" type="Button" parent="Panel/VBox/HBoxContainer2/Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.5
offset_top = -38.0
offset_right = 2.5
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_type_variation = &"FlatButton"
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_f80vl")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_82put")
theme_override_styles/hover = SubResource("StyleBoxTexture_rj181")
theme_override_styles/pressed = SubResource("StyleBoxTexture_oakwg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5ixcg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5ixcg")

[node name="Control2" type="Control" parent="Panel/VBox/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="back_to_lvl_select" type="Button" parent="Panel/VBox/HBoxContainer2/Control2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -115.0
offset_top = -38.0
offset_right = -39.0
offset_bottom = 38.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_type_variation = &"FlatButton"
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("3_f80vl")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_quppt")
theme_override_styles/hover = SubResource("StyleBoxTexture_ys4xk")
theme_override_styles/pressed = SubResource("StyleBoxTexture_qandg")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_5ixcg")
theme_override_styles/focus = SubResource("StyleBoxEmpty_5ixcg")

[node name="btn_hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_3yiuc")
bus = &"SFX"

[node name="btn_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_b7rgs")
volume_db = -5.0
bus = &"SFX"

[connection signal="mouse_entered" from="Panel/VBox/HBoxContainer/Control/restart_lvl" to="." method="_on_restart_lvl_mouse_entered"]
[connection signal="pressed" from="Panel/VBox/HBoxContainer/Control/restart_lvl" to="." method="_on_restart_lvl_pressed"]
[connection signal="mouse_entered" from="Panel/VBox/HBoxContainer/Control3/resume" to="." method="_on_resume_mouse_entered"]
[connection signal="pressed" from="Panel/VBox/HBoxContainer/Control3/resume" to="." method="_on_resume_pressed"]
[connection signal="mouse_entered" from="Panel/VBox/HBoxContainer2/Control/help_btn" to="." method="_on_help_btn_mouse_entered"]
[connection signal="pressed" from="Panel/VBox/HBoxContainer2/Control/help_btn" to="." method="_on_help_btn_pressed"]
[connection signal="mouse_entered" from="Panel/VBox/HBoxContainer2/Control2/back_to_lvl_select" to="." method="_on_back_to_lvl_select_mouse_entered"]
[connection signal="pressed" from="Panel/VBox/HBoxContainer2/Control2/back_to_lvl_select" to="." method="_on_back_to_lvl_select_pressed"]
